--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "jquery": "^3.2.1",
     "jquery-slim": "^3.0.0",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
@@ -37,6 +38,7 @@
     "gsap": "^1.20.2",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "jquery.nicescroll": "^3.7.6",
     "node-sass": "^4.5.3",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
