--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "browser-sync": "^2.19.0",
+    "browser-sync-webpack-plugin": "^1.2.0",
+    "fs": "0.0.1-security",
+    "gsap": "^1.20.3",
+    "imagesloaded": "^4.1.3",
     "jquery": "^3.2.1",
     "jquery-slim": "^3.0.0",
+    "masonry-layout": "^4.2.0",
+    "net": "^1.0.2",
+    "tls": "0.0.1",
+    "vee-validate": "^2.0.0-beta.17",
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-cookie": "^1.1.4",
+    "vue-masonry": "^0.10.12",
+    "vue-router": "^2.3.1",
+    "vue-session": "^0.9.10"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
